<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_image_logo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/title"
                tools:src="@tools:sample/avatars" />

            <Button
                android:id="@+id/btn_favorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/baseline_unfavorite_24"
                android:contentDescription="@string/favorite"
                android:layout_margin="10dp"
                android:layout_gravity="end|top"
                android:visibility="visible"/>

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/dicodingeventname"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_event_ownerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_event_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/dicodingeventowner" />

            <TextView
                android:id="@+id/tv_event_beginTime"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_ownerName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/dicodingeventbegintime" />

            <TextView
                android:id="@+id/tv_event_quota"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textAlignment="textEnd"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_beginTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/dicodingeventquota" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>