<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

                <ImageView
                    android:id="@+id/iv_image_logo"
                    android:layout_width="96dp"
                    android:layout_height="99dp"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/dicodingeventimage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_event_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_image_logo"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/dicodingeventname" />

                <TextView
                    android:id="@+id/tv_event_ownerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_event_name"
                    app:layout_constraintStart_toStartOf="@+id/tv_event_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_event_name"
                    tools:text="@string/dicodingeventowner" />

                <TextView
                    android:id="@+id/tv_event_beginTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_event_name"
                    app:layout_constraintStart_toStartOf="@+id/tv_event_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_event_ownerName"
                    tools:text="@string/dicodingeventbegintime" />

                <TextView
                    android:id="@+id/tv_event_quota"
                    android:layout_width="102dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="4dp"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_event_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_event_beginTime"
                    tools:text="@string/dicodingeventquota" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>